--- a/gloom.css
+++ b/gloom.css
@@ -1,5 +1,5 @@
 body {
-  background: url(https://mysteriousparadox.github.io/twitch.png) no-repeat center center fixed;
+  background: url(https://mysteriousparadox.github.io/oddishCDN/twitch.png) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
