--- a/transparency.css
+++ b/transparency.css
@@ -16,3 +16,10 @@ div.transbox p {
   font-weight: bold;
   color: #000000;
 }
+#rollButton{
+  cursor: pointer;
+  background-color: slateblue;
+  color: white;
+  font-size: 12pt;
+  padding: 10px 15px;
+}    
