--- a/transparency.css
+++ b/transparency.css
@@ -23,3 +23,13 @@ div.transbox p {
   font-size: 12pt;
   padding: 10px 15px;
 }    
+div.transbox_alternate {
+  margin: auto;
+  background-color: #ffffff;
+  border: 1px solid black;
+  opacity: 0.6;
+  filter: alpha(opacity=60); /* For IE8 and earlier */
+}
+div.no_border {
+  border: none;
+}
